# json-rpc-core

./: json-rpc-core.cabal
src/Network/JsonRpc/: Codec.hs  Transport.hs  Types.hs
src/Network/JsonRpc/Codec/: Internal.hs
src/Network/JsonRpc/Types/: Internal.hs
test/Test/Network/JsonRpc/: CodecSpec.hs  Generators.hs  TransportSpec.hs  TypesSpec.hs
